[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=3.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "cycflow"
version = "0.3.0"
description = "Python client bindings for CycFlow"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
authors = [{ name = "griglapidus" }]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5", "pandas>=1.5"]
dev  = ["pytest>=7", "pytest-asyncio>=0.21"]

[tool.scikit-build]
wheel.packages = ["python/cycflow"]
cmake.version = ">=3.15"
cmake.build-type = "Release"